<?xml version="1.0"?>
<package format="2">

  <name>mrs_usv_ardurover_api</name>
  <version>1.0.0</version>
  <description>ArduPilot Rover API for MRS UAV System</description>

  <author email="filip.novak@fel.cvut.cz">Filip Novak</author>
  <maintainer email="filip.novak@fel.cvut.cz">Filip Novak</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>mavros_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <mrs_uav_hw_api plugin="${prefix}/plugins.xml" />
  </export>

</package>
